# ai-pr-reviewer

./: .dockerignore  .gitignore  Dockerfile.local  LICENSE  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: defe81f7dfcb_create_webhook_event_table.py
app/: main.py
app/api/v1/: __init__.py  router.py
app/api/v1/endpoints/: health.py
app/core/: __init__.py  config.py  db.py  logging.py
app/models/: __init__.py  mixins.py  webhook_event.py
docker/: docker-compose.local.yml
shellscripts/: entrypoint.sh
